# FAIRVibSpec

./: .config.ini  .coveragerc  .gitignore  .pre-commit-config.yaml  0601.json  Achim.ipynb  DEV.ipynb  LICENSE  README.md  allotrope_mapping.ipynb  dev.ipynb  ir_analysis.ipynb  ir_evaluation.ipynb  mermaid.md  mkdocs.yml  mypy.ini  peak_fitter_test.ipynb  pyproject.toml  ruff.toml  sif_parser.ipynb  test.ipynb  user_guide.ipynb
.github/workflows/: ci.yaml
data/: example_ftir.json  ftir_0.json  ftir_1.json  ftir_2.json  ftir_3.json  ftir_4.json  ftir_5.json  ftir_6.json  ftir_7.json
docs/: iranalysis.md
fairvibspec/: __init__.py
fairvibspec/core/: __init__.py  analysis.py  band.py  dataset.py  detection.py  experiment.py  fairvibspec.py  fit.py  instrument.py  iranalysis.py  irparameters.py  main.py  measurement.py  measurementseries.py  measurementtype.py  parameters.py  processingsteps.py  qualitativemeasurement.py  result.py  sample.py  value.py  (+4 more)
modules/: acid_sites_analyzer.py  analysis.py  asm_ftir.py  asm_ftir_clean.py  asm_raman_raw.py  base_handler.py  data_prep.py  data_processer.py  fairvibspec.py  gaussian_fit.py  helpers.py  ir_file_handler.py  ir_model.py  legacy_peak_fitter.py  models.py  peak_fitter.py  utils.py  validators.py
schemes/: fairvibspec_schema_with_strings.md  fairvibspec_schema_with_units.md  fairvibspec_with_strings.md  fairvibspec_with_units.md
specifications/: class_diagram.md  fairvibspec.md  ftir.embed.schema.json  iranalysis.md  raman.embed.schema.json
tmp/: asm_ftir_raw.py  ir_file_handler copy.py  mapper.py  utils copy.py
(+2 files in other folders)
