[build-system]
requires = ["hatchling>=1.25", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[project]
name = "fairvibspec"
dynamic = ["version"]
description = "FAIR vibrational spectroscopy toolkit"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "notebook>=7.1",
    "ipywidgets>=8.1",
    "ipyfilechooser>=0.6",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "mypy", "ruff", "pre-commit"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["fairvibspec"]

[tool.pytest.ini_options]
addopts = """
-q
--maxfail=1
--disable-warnings
--cov=fairvibspec
--cov-report=term-missing:skip-covered
--cov-report=xml
--cov-fail-under=0
"""
testpaths = ["tests"]
